[Akshay] MOD:Preserve session_id and session_expires_at in Subscription cancel! and update Swagger docs
