# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2025_05_07_085951) do
+ActiveRecord::Schema[7.1].define(version: 2025_05_07_151116) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -94,7 +94,6 @@ ActiveRecord::Schema[7.1].define(version: 2025_05_07_085951) do
     t.bigint "user_id", null: false
     t.integer "plan"
     t.string "status"
-    t.string "payment_id"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.datetime "expiry_date"
